--- a/app/src/main/res/layout/row_jugador.xml
+++ b/app/src/main/res/layout/row_jugador.xml
@@ -74,10 +74,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
         android:text="0"
         android:textColor="@color/azulmuyoscuro"
-        android:textStyle="bold"
         android:textSize="26sp"
+        android:textStyle="bold"
         card_view:layout_constraintEnd_toStartOf="@+id/ivRowJugadorLike"
         card_view:layout_constraintTop_toBottomOf="@+id/tvRowJugadorNombre" />
 </androidx.constraintlayout.widget.ConstraintLayout>
